# RedisGraph

./: .astylerc  .dockerignore  .gitignore  .gitmodules  .spellcheck.yml  .travis.yml  CI  CMakeLists.txt  CONTRIBUTING.md  DockerFile.test  Dockerfile  Dockerfile.alpine  Dockerfile.centos  LICENSE  LICENSE.txt  Makefile  README.md  SECURITY.md  circle.yml  commands.json  design.md  filter.c  filter.h  graph.c  graph.h  lgtm.yml  mkdocs.yml  node.c  node.h  ramp-rce.yml  ramp.yml  ramp_manifest.yml  redis_graph.c  setup  setup-build.py  setup-tests.py  system-setup.py  test_edge.c  test_filter  test_filter.c  (+8 more)
src/: CMakeLists.txt  Makefile  RG.h  arithmetic_expression.c  arithmetic_expression.h  bulk_insert.c  bulk_insert.h  common.h  config.c  config.h  debug.c  debug.h  delete_graph.c  delete_graph.h  edge.c  edge.h  errors.c  errors.h  filters.h  globals.c  globals.h  module.c  module_event_handlers.c  module_event_handlers.h  node.c  node.h  query_ctx.c  query_ctx.h  query_executor.c  query_executor.h  reconf_handler.c  reconf_handler.h  redismodule.h  resultset.c  resultset.h  tags  timeout.c  timeout.h  triplet.c  triplet.h  (+6 more)
src/GraphBLASExt/: GxB_Clone.c  GxB_Clone.h  GxB_Delete.c  GxB_Delete.h  GxB_Pending.c  GxB_Pending.h  tuples_iter.c  tuples_iter.h
src/aggregate/: agg_funcs.c  agg_funcs.h  aggregate.c  functions.c  repository.h
src/algorithms/: GB_sort.h  LAGraph.h  LAGraph_BF_full.c  LAGraph_BF_full.h  LAGraph_bf_full1a.c  LAGraph_bfs_both.c  LAGraph_bfs_both.h  LAGraph_bfs_pushpull.c  LAGraph_bfs_pushpull.h  LAGraph_bfs_pushpull_to_dest.c  LAGraph_cdlp.c  LAGraph_cdlp.h  LG_BreadthFirstSearch_vanilla.c  algorithms.c  algorithms.h  all_neighbors.c  all_neighbors.h  all_paths.c  all_paths.h  all_shortest_paths.c  all_shortest_paths.h  bfs.c  bfs.h  detect_cycle.c  detect_cycle.h  dfs.c  dfs.h  longest_path.c  longest_path.h  pagerank.c  pagerank.h  path.c  path.h  reachability.c  reachability.h
src/api/: graphapi.h
src/arithmetic/: agg_ctx.h  agg_funcs.c  agg_funcs.h  aggregate.c  aggregate.h  algebraic_expression.c  algebraic_expression.h  algebraic_expression_structs.h  arithmetic_expression.c  arithmetic_expression.h  arithmetic_expression_construct.c  arithmetic_expression_construct.h  arithmetic_op.c  arithmetic_op.h  func_desc.c  func_desc.h  funcs.c  funcs.h  repository.c  repository.h  tuples_iter.c  tuples_iter.h
src/ast/: ast.c  ast.h  ast_annotations_ctx_collection.c  ast_annotations_ctx_collection.h  ast_build_ar_exp.c  ast_build_ar_exp.h  ast_build_filter_tree.c  ast_build_filter_tree.h  ast_build_op_contexts.c  ast_build_op_contexts.h  ast_build_reference_map.c  ast_enrich.c  ast_expand_fixed_length_traversals.c  ast_mapping.c  ast_mock.c  ast_mock.h  ast_rewrite.c  ast_rewrite.h  ast_rewrite_call_subquery.c  ast_rewrite_call_subquery.h  ast_rewrite_same_clauses.c  ast_rewrite_same_clauses.h  ast_rewrite_star_projections.c  ast_rewrite_star_projections.h  ast_shared.c  ast_shared.h  ast_validations.c  ast_validations.h  ast_visitor.c  ast_visitor.h  cypher_whitelist.c  cypher_whitelist.h
src/bulk_insert/: bulk_insert.c  bulk_insert.h  bulk_insert_context.c  bulk_insert_context.h
src/cache/: cache.c  cache.h  cache_data.h  cache_includes.h  lru_queue.c  lru_queue.h
src/commands/: cmd_alias.c  cmd_bulk_insert.c  cmd_bulk_insert.h  cmd_call.c  cmd_call.h  cmd_config.c  cmd_config.h  cmd_constraint.c  cmd_context.c  cmd_context.h  cmd_copy.c  cmd_debug.c  cmd_delete.c  cmd_delete.h  cmd_dispatcher.c  cmd_dispatcher.h  cmd_effect.c  cmd_explain.c  cmd_explain.h  cmd_info.c  cmd_list.c  cmd_profile.c  cmd_profile.h  cmd_query.c  cmd_query.h  cmd_slowlog.c  cmd_slowlog.h  cmd_vacuum.c  commands.c  commands.h  execution_ctx.c  execution_ctx.h
src/configuration/: config.c  config.h  reconf_handler.c  reconf_handler.h
src/constraint/: constraint.c  constraint.h  exists_constraint.c  mandatory_constraint.c  tags  unique_constraint.c
src/cron/: cron.c  cron.h  tasks.c
src/datatypes/: array.c  array.h  datatypes.h  map.c  map.h  path.c  path.h  point.c  point.h  set.c  set.h  sipath.c  sipath.h  sipath_builder.c  temporal_utils.c  temporal_utils.h  temporal_value.c  temporal_value.h
src/effects/: effect_log.c  effect_size.c  effects.c  effects.h  effects_apply.c
src/errors/: error_msgs.h  errors.c  errors.h
src/execution_plan/: execution_plan.c  execution_plan.h  execution_plan_clone.c  execution_plan_clone.h  execution_plan_debug.c  execution_plan_modify.c  execution_plan_post_build.c  execution_plan_post_build.h  execution_plan_reduce_to_apply.c  record.c  record.h  record_batch.c  record_batch.h  record_map.c  record_map.h
src/filter_tree/: filter_tree.c  filter_tree.h  filter_tree_utils.c  filter_tree_utils.h  ft_to_rsq.c  ft_to_rsq.h
src/graph/: GraphBLAS.h  adjacency_matrix.h  edge.c  edge.h  edge_iterator.c  edge_iterator.h  graph.c  graph.c.orig  graph.h  graph_callbacks.c  graph_callbacks.h  graph_clone.c  graph_context.c  graph_context.h  graph_defs.h  graph_delete_nodes.c  graph_entity.c  graph_entity.h  graph_hub.c  graph_hub.h  graph_memory_consumption.c  graph_statistics.c  graph_statistics.h  graph_type.c  graph_type.h  graphcontext.c  graphcontext.h  graphcontext_clone.c  graphcontext_type.c  graphcontext_type.h  graphdecodecontext.c  graphdecodecontext.h  graphencodecontext.c  graphencodecontext.h  graphmetacontext.c  graphmetacontext.h  info.c  info.h  node.c  node.h  (+13 more)
src/grouping/: group.c  group.h  group_cache.c  group_cache.h  khash.h
src/hexastore/: hexastore.c  hexastore.h  triplet.c  triplet.h
src/index/: fulltext_index.c  fulltext_index.h  index.c  index.h  index_construct.c  index_edge.c  index_field.c  index_field.h  index_iter.c  index_iter.h  index_node.c  index_type.c  index_type.h  index_updates.c  index_updates.h  indexer.c  indexer.h
src/info/: info.c  info.h  query_info.c  query_info.h
src/jit/: jit.c  jit.h
src/util/: arr.h  (+67 more)
test/: CMakeLists.txt  test_agg_sum.c  test_edge.c  test_filter_tree.c  test_graph.c  test_hexastore.c  test_node.c  test_resultset_record.c  test_triplet.c  test_value.c
(+4849 files in other folders)
